--- a/templates/error.html
+++ b/templates/error.html
@@ -6,7 +6,7 @@
 <div id="content">
   <div class="post">
     <h2>Why am I on this page?</h2>
-         <p>Congrats, you found a little bug running around in our code somewhere!  We have automatically notified about this error, so no need to report it to us.  Thanks very much for finding the issue, we'll likely have it fixed in a couple of hours.  In the meantime, try hitting the back button.
+         <p>Congrats, you found a little bug running around in our code somewhere!  We have automatically been notified about this error, so no need to report it to us.  Thanks very much for finding the issue, we'll likely have it fixed in a couple of hours.  In the meantime, try hitting the back button.
         </p>
   </div>
   
