small UI changes adding variables

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,8 @@
         <h2>Data Sources</h2>
         <p>Weather Conditions</p>
           <ul>
-            <li><a href="www.noaa.gov" target="_blank">NOAA</a></li>
+            <li><a href="http://noaa.gov" target="_blank">NOAA</a></li>
+            <li><a href="http://weather.yahoo.com" target="_blank">Yahoo! Weather</a></li>
           </ul>
         <p>Avalanche Conditions</p>
           <ul>
