--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,10 @@
 <div id="wrapper">
   <!-- BEGIN header -->
   <div id="header">
-    <p class="links"> <a href="/home">RSS</a> | <a href="/home">Login</a> | <a href="/home">My Data</a> </p>
-    
+
+
+    <p class="links"> &nbsp; </p>
+     
     <h1><a href="/home">Mountain Metrics</a></h1>
     
     <ul class="categories">
