made a bunch of changes to FE, info in doc, added handler for new page graphs.html

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -139,6 +139,12 @@ img {
 	float: left;
 	padding: 20px 0;
 }
+
+#content_wide {
+	width: 800px;
+	float: left;
+	padding: 20px 0;
+}
 	#featured {
 		margin-bottom: 10px;
 		height: 230px;
