--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,13 @@
 <title>Mountain Metrics</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style type="text/css">{% include "css/style.css" %}</style>
+<style type="text/css">{% include "css/jquery.tweet.css" %}</style>
 
 <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="ie.css" /><![endif]-->
 <script type="text/javascript">{% include "js/jquery-1.3.2.min.js" %}></script>
 <script type="text/javascript">{% include "js/jquery.cycle.all.min.js" %}></script>
 <script type="text/javascript">{% include "js/script.js" %}></script>
+
 
 </head>
 
@@ -22,13 +24,14 @@
   <div id="header">
 
 
-    <p class="links"> &nbsp; </p>
+    <p class="links">&nbsp;  </p>
      
     <h1><a href="/home">Mountain Metrics</a></h1>
     
     <ul class="categories">
       <li><a href="/about">About</a></li>
       <li><a href="/home">Metrics</a></li>
+      <li><a href="/graphs">Graphs</a></li>
       <li><a href="/home"</a>&nbsp;</li>
     </ul>
     
