--- a/templates/home.html
+++ b/templates/home.html
@@ -10,12 +10,12 @@
       <!-- BEGIN weather forecast module -->
       <div class="post">
         <h2>Current and Forecasted Weather</h2>
-        <p>Today: {{ ThreeDayWeatherForecast.date_time_added|date:"D - F j, Y Z" }}</p>
+        <p>Today: {{ ThreeDayWeatherForecast.date_time_added|date:"D - F j, Y" }}</p>
           <ul>
             {% if ThreeDayWeatherForecast.weather %}<li>Overall Weather: {{ ThreeDayWeatherForecast.weather }}</li>{% else %}{% endif %}
             <li>Current Temp: {{ ThreeDayWeatherForecast.current_temp_f }}&deg; F</li>
-            <li>High Temp: {Insert Temp}</li>
-            <li>Low Temp: {Insert Temp}</li>
+            <li>High Temp: {{ TemperaturePerDay.current_temp_f_high }}</li>
+            <li>Low Temp: {{ TemperaturePerDay.current_temp_f_low }}</li>
             <li>Wind Direction: {{  ThreeDayWeatherForecast.wind_dir }}</li>
             {% if ThreeDayWeatherForecast.wind_mph %}<li>Wind Speed: {{ ThreeDayWeatherForecast.wind_mph }} mph to {{ ThreeDayWeatherForecast.wind_gust_mph }} mph</li>{% else %}{% endif %}
             {% if ThreeDayWeatherForecast.visibility_mi %}<li>Visibility: {{  ThreeDayWeatherForecast.visibility_mi }} miles</li>{% else %}{% endif %}
@@ -47,7 +47,7 @@
       <!-- BEGIN resort snow report module -->
       <div class="post">
         <h2>Today's Resort Snow Report</h2>
-        <p>{% if SquawValleySnowReport.date_time_added %}<p>Squaw Valley {{ SquawValleySnowReport.date_time_added|date:"D - F j, Y (P)" }}</p>{% else %}No new snow report for Squaw Valley.{% endif %}
+        <p>{% if SquawValleySnowReport.date_time_added %}<p>Squaw Valley {{ SquawValleySnowReport.date_time_added|date:"D - F j, Y" }}</p>{% else %}No new snow report for Squaw Valley.{% endif %}
           <ul>
             {% if SquawValleySnowReport.current_condition %}<li>Current Condition: {{ SquawValleySnowReport.current_condition }}</li>{% else %}{% endif %}
             {% if SquawValleySnowReport.wind %}<li>Current Wind: {{ SquawValleySnowReport.wind }} mph</li>{% else %}{% endif %}
@@ -62,19 +62,27 @@
           </ul>
        
         
-        <p>{% if AlpineMeadowsSnowReport.date_time_added %}<p>Alpine Meadows {{ AlpineMeadowsSnowReport.date_time_added|date:"D - F j, Y (P)" }}</p>{% else %}No new Snow Report for Alpine Meadows.{% endif %}
+        <p>{% if AlpineMeadowsSnowReport.date_time_added %}<p>Alpine Meadows {{ AlpineMeadowsSnowReport.date_time_added|date:"D - F j, Y" }}</p>{% else %}No new Snow Report for Alpine Meadows.{% endif %}
           <ul>
-            {% if AlpineMeadowsSnowReport.current_temp_f %}<li>Current Temp: {{ AlpineMeadowsSnowReport.current_temp_f }} &deg;F</li>{% else %}{% endif %}
             {% if AlpineMeadowsSnowReport.current_condition %}<li>Current Condition: {{ AlpineMeadowsSnowReport.current_condition }}</li>{% else %}{% endif %}
-            {% if AlpineMeadowsSnowReport.wind %}<li>Wind: {{ AlpineMeadowsSnowReport.wind }}</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.upper_mountain_temp_f %}<li>Upper Mountain Temp: {{ AlpineMeadowsSnowReport.upper_mountain_temp_f }}&deg;F</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.lower_mountain_temp_f %}<li>Lower Mountain Temp: {{ AlpineMeadowsSnowReport.lower_mountain_temp_f }}&deg;F</li>{% else %}{% endif %}
 
+            
+            {% if AlpineMeadowsSnowReport.wind_base %}<li>Wind at Base: {{ AlpineMeadowsSnowReport.wind_base }}</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.wind_top %}<li>Wind at Top: {{ AlpineMeadowsSnowReport.wind_top }}</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.lower_mountain_snow_base_inches %}<li>Lower Mountain Snow Depth: {{ AlpineMeadowsSnowReport.lower_mountain_snow_base_inches }} in</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.upper_mountain_snow_base_inches %}<li>Upper Mountain Snow Depth: {{ AlpineMeadowsSnowReport.upper_mountain_snow_base_inches }} in</li>{% else %}{% endif %}
+
+            {% if AlpineMeadowsSnowReport.new_snow_total_inches_base %}<li>New Snow at Base: {{ AlpineMeadowsSnowReport.new_snow_total_inches_base }} in</li>{% else %}{% endif %}
+            {% if AlpineMeadowsSnowReport.new_snow_total_inches_top %}<li>New Snow at Top: {{ AlpineMeadowsSnowReport.new_snow_total_inches_top }} in</li>{% else %}{% endif %}
             {% if AlpineMeadowsSnowReport.today_high_temp %}<li>High Temp: {{ AlpineMeadowsSnowReport.today_high_temp }}</li>{% else %}{% endif %}
             {% if AlpineMeadowsSnowReport.today_low_temp %}<li>Low Temp: {{ AlpineMeadowsSnowReport.today_low_temp }}</li>{% else %}{% endif %}
             {% if AlpineMeadowsSnowReport.today_new_snow %}<li>New Snow: {{ AlpineMeadowsSnowReport.today_new_snow }} in</li>{% else %}{% endif %}
             {% if AlpineMeadowsSnowReport.today_expected_snowfall %}<li>Expected Snow: {{ AlpineMeadowsSnowReport.today_expected_snowfall }} in</li>{% else %}{% endif %}
           </ul>
 
-        <p>{% if KirkwoodSnowReport.date_time_added %}<p>Kirkwood {{ KirkwoodSnowReport.date_time_added|date:"D - F j, Y (P)" }}</p>{% else %}No new snow report for Kirkwood.{% endif %}
+        <p>{% if KirkwoodSnowReport.date_time_added %}<p>Kirkwood {{ KirkwoodSnowReport.date_time_added|date:"D - F j, Y" }}</p>{% else %}No new snow report for Kirkwood.{% endif %}
           <ul>
             {% if KirkwoodSnowReport.current_temp_f %}<li>Current Temp: {{KirkwoodSnowReport.current_temp_f }} &deg;F</li>{% else %}{% endif %}
             {% if KirkwoodSnowReport.current_condition %}<li>Current Condition: {{KirkwoodSnowReport.current_condition }}</li>{% else %}{% endif %}
@@ -99,7 +107,7 @@
             {% if DOTi80RoadConditions.chains_required %}<li>Location of Requirement: {{ DOTi80RoadConditions.stretch_of_road }}{% else %}{% endif %}</li>
           </ul>
         
-        {% if DOTi80RoadConditions.date_time_added %}<p>Details: {{ DOTi80RoadConditions.date_time_added|date:"F j, Y - P" }}</p>{% else %}<p>No New Traffic Updates</p>{% endif %}
+        {% if DOTi80RoadConditions.date_time_added %}<p>Details: {{ DOTi80RoadConditions.date_time_added|date:"F j, Y" }}</p>{% else %}<p>No New Traffic Updates</p>{% endif %}
           <ul>
             {% if DOTi80RoadConditions.road_conditions_details %}<li>In Northern California and the Sierra Nevada: {{ DOTi80RoadConditions.road_conditions_details|title }}</li>{% else %}{% endif %}
           </ul>
@@ -153,8 +161,7 @@
 "/></p>
       </div>
       <!-- END snowfall trend module -->
-
-
+           
   </div>
   <!-- END sidebar -->
 </div>
