--- a/templates/base.html
+++ b/templates/base.html
@@ -3,19 +3,63 @@
 <head>
 <title>Mountain Metrics</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<!-- Lane: Uncomment this if you want to style the tweet results.
+
+<link href="static/tweet/jquery.tweet.css" media="all" rel="stylesheet" type="text/css"/> 
+<link href="static/tweet/jquery.tweet.query.css" media="all" rel="stylesheet" type="text/css"/>
+
+-->
+
 <style type="text/css">{% include "css/style.css" %}</style>
-<style type="text/css">{% include "css/jquery.tweet.css" %}</style>
+<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
+<script language="javascript" src="static/tweet/jquery.tweet.js" type="text/javascript"></script>
 
 <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="ie.css" /><![endif]-->
-<script type="text/javascript">{% include "js/jquery-1.3.2.min.js" %}></script>
+<!-- BLOCKED OUT BY BILL - UNCLEAR THAT THIS IS NEEDED.
+
+ <script type="text/javascript">{% include "js/jquery-1.3.2.min.js" %}></script>
 <script type="text/javascript">{% include "js/jquery.cycle.all.min.js" %}></script>
 <script type="text/javascript">{% include "js/script.js" %}></script>
 
+-->
+<script type='text/javascript'> 
+  jQuery(document).ready(function($) {
+    $(".tweet").tweet({
+      join_text: "auto",
+      username: "seaofclouds",
+      avatar_size: 48,
+      count: 3,
+      auto_join_text_default: "we said,", 
+      auto_join_text_ed: "we",
+      auto_join_text_ing: "we were",
+      auto_join_text_reply: "we replied",
+      auto_join_text_url: "we were checking out",
+      loading_text: "loading tweets..."
+    });
+    $("#query").tweet({
+      avatar_size: 32,
+      count: 4,
+      query: "tweet.seaofclouds.com",
+      loading_text: "searching twitter..."
+    });
+    $("#userandquery").tweet({
+      count: 3,
+      query: "from:seaofclouds&phrase=http",
+      loading_text: "searching twitter..."
+    });
+    $("#fromtwo").tweet({
+      avatar_size: 32,
+      count: 4,
+      query: "from%3Aseaofclouds+OR+from%3Alaughingsquid",
+      loading_text: "searching twitter..."
+    });
+  })      
+</script>
 
 </head>
 
 <body>
-
 {% block header %}
 
 <!-- BEGIN wrapper -->
